# talonia

./: Cargo.toml  Cargo.toml.backup  Cargo.toml.template  README.md  _makearc.sh  deploy.sh  maketoml  sync.sh  update.sh
man/: myapp.1
shared/worlds/: burgs.csv  fantasieman.txt  female_fantasy.csv  gen_fr_fam.csv  gen_fr_female.csv  gen_fr_female.txt  gen_fr_male.csv  mannennamen.txt  org_nl_female.csv  org_nl_male.csv  vrouwennamen.txt
src/: main.backup  main.rs
