[package]
name = "talonia"
version = "0.1.0"
edition = "2024"
authors = ["Ray Koster <kosterray@gmail.com"]
license = "MIT"
description = "fantasygame using AI"

[dependencies]
directories = "6.0.0"
env_logger = "0.11.6"
log = "0.4.26"
dirs = "6.0.0"
pathbuf = "1.0.0"
#foundation314 = { git = "https://github.com/Rickyvonicky/foundation314" }
foundation314 = { path = "../foundation314" }

